plugins {
    id 'org.jetbrains.intellij' version '1.17.4'
    id 'java'
}

group 'com.caojx'
version '1.3.7.20250907'

repositories {
    maven { url 'https://maven.aliyun.com/nexus/content/groups/public/' }
    mavenLocal()
    mavenCentral()
}

java {
    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11
}

dependencies {
    implementation 'com.mysql:mysql-connector-j:9.2.0'
    implementation 'com.oracle.ojdbc:ojdbc10:19.3.0.0'
    implementation 'org.freemarker:freemarker:2.3.30'
    implementation 'com.alibaba.fastjson2:fastjson2:2.0.57'
    implementation 'org.jdom:jdom2:2.0.6.1'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
    compileOnly 'org.projectlombok:lombok:1.18.38'
    annotationProcessor 'org.projectlombok:lombok:1.18.38'
}

test {
    useJUnit()
    testLogging {
        events "passed", "skipped", "failed"
    }
}

// See https://github.com/JetBrains/gradle-intellij-plugin/
intellij {
    version = '2024.1.7'
    plugins = ['java']
    downloadSources = true
    updateSinceUntilBuild = false
}
patchPluginXml {
    sinceBuild = '193'
    changeNotes = """
    Since 2025年3月7日 by pdkst<br>
      1. 添加表前缀<br>
      2. 表名查找前后增加%，enter键查询<br>
      3. 包名选择默认从basePackage开始<br>
      4. 增加facade模式<br>
      5. 增加facade实现类<br>
      6. 拆分单独生成UI<br>
      7. 重新生成后合并原来的mybatis xml方法<br>
      
    
    <br>
    
    Before 2025年3月7日 by caojx<br>
      v1.3.7<br>
      <em>1.save database configuration to directory user.home/.myBatisCodeGenerator/ext-config.json </em><br>
      
      v1.3.6<br>
      <em>1.support auto set generator package and path</em><br>
      
      v1.3.5<br>
      <em>1.entity support swagger</em><br>
      
      v1.3.4<br>
      <em>1.Optimize package chooser</em><br>
      
      v1.3.3<br>
      <em>1.Optimize database configuration</em><br>
            
      v1.3.2<br>
      <em>1.persistence fix</em><br>
      
      v1.3.1<br>
      <em>1.Support for custom jdbcType and javaType mapping</em><br>
      <em>2.fix testConnectionDB</em><br>
      
      v1.3<br>
      <em>1.package and packagePath chooser optimization</em><br>
      <em>2.supperClass chooser optimization</em><br>
      
      v1.2.1<br>
      <em>1.fix mapperXml keyProperty</em><br>
      
      v1.2<br>
      <em>1.package chooser optimization</em><br>
      
      v1.0<br>
      <em>1.Support MySQL</em><br>
      """
}

runIde {
    jvmArgs = ['--add-opens', 'java.base/java.io=ALL-UNNAMED']
}
